// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot: .cursor/rules/{dir}.mdc > first per-directory rules file renders to a stable snapshot 1`] = `
"<!-- roadie:start:cursor-rules-dir:src -->
## src/ — source files

This directory contains source files (4 files detected).

When working in this directory:
- Follow existing code patterns and conventions.
- Maintain type safety and avoid \`any\`.
<!-- roadie:end:cursor-rules-dir:src -->
"
`;

exports[`Snapshot: .cursor/rules/project.mdc > renders to a stable snapshot 1`] = `
"<!-- roadie:start:tech-stack -->
## Tech Stack

- **TypeScript** 5.2.0 (language)
- **Node.js** (runtime)
- **Vitest** 0.34.0 (test_tool)
- **tsup** 8.0.0 (build_tool)
- **npm** (package_manager)
<!-- roadie:end:tech-stack -->

<!-- roadie:start:commands -->
## Commands

- **build**: \`npm run build\`
- **test**: \`npm test\`
- **lint**: \`npm run lint\`
<!-- roadie:end:commands -->
"
`;

exports[`Snapshot: .github/copilot-instructions.md > renders to a stable snapshot 1`] = `
"<!-- roadie:start:project-overview -->
## Project Overview

Tech stack: TypeScript, Node.js, Vitest, tsup, npm

This file is auto-generated by Roadie. It provides context for AI coding agents.
<!-- roadie:end:project-overview -->

<!-- roadie:start:tech-stack -->
## Tech Stack

- **TypeScript** 5.2.0 (language)
- **Node.js** (runtime)
- **Vitest** 0.34.0 (test_tool)
- **tsup** 8.0.0 (build_tool)
- **npm** (package_manager)
<!-- roadie:end:tech-stack -->

<!-- roadie:start:commands -->
## Project Commands

- **build**: \`npm run build\`
- **test**: \`npm test\`
- **lint**: \`npm run lint\`
<!-- roadie:end:commands -->

<!-- roadie:start:project-structure -->
## Project Structure

- **src/** (source)
- **test/** (test)
- **scripts/** (scripts)
<!-- roadie:end:project-structure -->
"
`;

exports[`Snapshot: AGENTS.md > renders to a stable snapshot (no learningDb) 1`] = `
"<!-- roadie:start:project-overview -->
# Project Overview

**Tech stack:** TypeScript, Node.js, Vitest, tsup, npm

This file is auto-generated by Roadie and provides context for AI coding agents.
Do not edit sections between \`<!-- roadie:start -->\` and \`<!-- roadie:end -->\` markers.
Custom notes added outside markers are preserved across regenerations.
<!-- roadie:end:project-overview -->

<!-- roadie:start:commands -->
## Project Commands

- **build**: \`npm run build\`
- **test**: \`npm test\`
- **lint**: \`npm run lint\`
<!-- roadie:end:commands -->

<!-- roadie:start:agent-roles -->
## Agent Roles

| Role | Scope | Name in Dropdown |
|------|-------|------------------|
| Diagnostician | Bug location and root cause analysis | \`agent: diagnostician\` |
| Fixer | Code fixes, minimal changes, pattern-following | \`agent: fixer\` |
| Planner | Feature planning, architecture decisions | \`agent: planner\` |
| Reviewer | Security, performance, quality, test coverage, standards | \`agent: reviewer\` |
| Documentarian | Documentation generation from source code | \`agent: documentarian\` |
<!-- roadie:end:agent-roles -->

<!-- roadie:start:workflows -->
## Available Workflows

| Workflow | Trigger | Steps |
|----------|---------|-------|
| Bug Fix | \`@roadie fix ...\` | 8 |
| Feature | \`@roadie add/create/build ...\` | 7 |
| Refactor | \`@roadie refactor/simplify ...\` | 5 |
| Review | \`@roadie review ...\` | 5 |
| Document | \`@roadie document/docs ...\` | 4 |
| Dependency | \`@roadie upgrade/migrate ...\` | 5 |
| Onboard | \`@roadie how does/where do I start ...\` | 4 |
<!-- roadie:end:workflows -->

<!-- roadie:start:directory-structure -->
## Directory Structure

- **Source:** src
- **Tests:** test
<!-- roadie:end:directory-structure -->
"
`;

exports[`Snapshot: CLAUDE.md > renders to a stable snapshot 1`] = `
"<!-- roadie:start:workspace-rules -->
# Global Rules — Apply in Every Workspace

## Tech Stack
- **TypeScript** 5.2.0 (language)
- **Node.js** (runtime)
- **Vitest** 0.34.0 (test_tool)
- **tsup** 8.0.0 (build_tool)
- **npm** (package_manager)

## Commands
- **build**: \`npm run build\`
- **test**: \`npm test\`
- **lint**: \`npm run lint\`
<!-- roadie:end:workspace-rules -->

<!-- roadie:start:repo-map -->
## Repository Map

- **src/** (source) — 4 files
- **test/** (test) — 3 files
- **scripts/** (scripts)
<!-- roadie:end:repo-map -->

<!-- roadie:start:forbidden -->
## Forbidden

_Add project-specific forbidden patterns here. This section is preserved across regenerations._
<!-- roadie:end:forbidden -->
"
`;

exports[`Snapshot: path-instructions > first instruction file renders to a stable snapshot 1`] = `
"<!-- roadie:start:path-instructions -->
---
name: \\"instruction: src\\"
description: Path-scoped instructions for /src (source files)
generated-by: roadie
generated-at: 2026-04-17T12:00:00Z
---

## src/ — source files

This directory contains source files (4 files detected).

When working in this directory:
- Follow existing code patterns and conventions.
- Maintain type safety and avoid \`any\`.
<!-- roadie:end:path-instructions -->
"
`;
